--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-autopep8==1.5
-jupyter==1.0.0
-jupyterlab==1.2.6
-numpy==1.18.1
-pandas==1.0.1
-pylint==2.4.4
-scipy==1.4.1
+autopep8==1.5.2
+GPUtil==1.4.0
+matplotlib==3.2.1
+numpy==1.18.4
+pandas==1.0.3
+pylint==2.5.2
+scikit-learn==0.22.1
+seaborn==0.10.1
+sentencepiece==0.1.85
+six==1.14.0
 sklearn==0.0
-torch==1.4.0
-torchtext==0.5.0
-torchvision==0.5.0
-tqdm==4.42.1
-transformers==2.4.1
+tensorboard==2.2.1
+torch==1.5.0
+tqdm==4.46.0
+transformers==2.10.0
