--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-autopep8==1.5.2
+autopep8==1.5.3
 GPUtil==1.4.0
-matplotlib==3.2.1
-numpy==1.18.4
-pandas==1.0.3
-pylint==2.5.2
+matplotlib==3.2.2
+mypy==0.782
+numpy==1.19.0
+pandas==1.0.5
+pylint==2.5.3
 scikit-learn==0.22.1
 seaborn==0.10.1
 sentencepiece==0.1.85
-six==1.14.0
+six==1.15.0
 sklearn==0.0
-tensorboard==2.2.1
-torch==1.5.0
-tqdm==4.46.0
-transformers==2.10.0
+tensorboard==2.2.2
+torch==1.5.1
+tqdm==4.47.0
+transformers==3.0.0
