--- a/Pipfile
+++ b/Pipfile
@@ -6,9 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-torch = "*"
 numpy = "*"
-transformers = "*"
 tqdm = "*"
 pylint = "*"
 autopep8 = "*"
@@ -18,6 +16,9 @@ mypy = "*"
 pandas = "*"
 tensorboard = "*"
 jupyter = "*"
+tabulate = "*"
+torch = "~=1.6.0"
+transformers = "~=3.3.1"
 
 [requires]
 python_version = "3.8"
