--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ pandas = "*"
 tensorboard = "*"
 jupyter = "*"
 tabulate = "*"
-torch = "~=1.6.0"
+torch = ">=1.6.0"
 transformers = "~=3.3.1"
 seaborn = "*"
 
